# congresskit

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.crates.md  README.md  audit.toml  deny.toml
.github/workflows/: backfill.yml  nightly.yml  release.yml
cli/: Cargo.toml
cli/src/: house.rs  main.rs  roster.rs  senate.rs
crates/congresskit/: Cargo.toml
crates/congresskit/src/: client.rs  error.rs  fetcher.rs  lib.rs  parquet_io.rs  record.rs
crates/congresskit/tests/: client.rs
data/: manifest.json
data/year=2015/: congress-2015.parquet
data/year=2016/: congress-2016.parquet
data/year=2017/: congress-2017.parquet
data/year=2018/: congress-2018.parquet
data/year=2019/: congress-2019.parquet
data/year=2020/: congress-2020.parquet
data/year=2021/: congress-2021.parquet
data/year=2022/: congress-2022.parquet
data/year=2023/: congress-2023.parquet
data/year=2024/: congress-2024.parquet
data/year=2025/: congress-2025.parquet
data/year=2026/: congress-2026.parquet
