[package]
name = "congresskit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "US congressional stock trades (STOCK Act periodic transaction reports) for Rust, from US House Clerk and US Senate public-record disclosures."
readme = "../../README.crates.md"
exclude = [
    "/data",
    "/docs",
    "/.github",
    "/cli",
    "CONTRIBUTING.md",
]

[dependencies]
thiserror.workspace = true
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
sha2 = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
directories = "5"

[dev-dependencies]
tokio = { workspace = true }
sha2 = { workspace = true }
tempfile = "3"
wiremock = "0.6"
